Move others benchmark over

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ parse/results.txt
 fetch/fetch-benchmark.png
 fetch/results.csv
 fetch/results.txt
+others/others-benchmark.png
+others/results.csv
+others/results.txt
