Add set of benchmarks to compare performance of different handlers

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ fetch/results.txt
 others/others-benchmark.png
 others/results.csv
 others/results.txt
+handlers/handlers-benchmark.png
+handlers/results.csv
+handlers/results.txt
